[gd_scene load_steps=4 format=3 uid="uid://bdvxlv0opvqpo"]

[ext_resource type="FontFile" uid="uid://dr71nbkfo7fov" path="res://fonts/Xolonium-Regular.ttf" id="1_0j66b"]
[ext_resource type="Script" path="res://menu.gd" id="1_iqpn5"]
[ext_resource type="AudioStream" uid="uid://ce3oq5i3uou2a" path="res://sound/menu_theme.wav" id="3_w0g6n"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_iqpn5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1272.0
offset_bottom = 709.0
color = Color(0.658824, 0.427451, 0.235294, 1)

[node name="title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 340.0
offset_top = 100.0
offset_right = 807.0
offset_bottom = 221.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("1_0j66b")
theme_override_font_sizes/font_size = 78
text = "Age of War"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="authors_label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 340.0
offset_top = 200.0
offset_right = 812.0
offset_bottom = 331.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.670588, 1, 0.65098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("1_0j66b")
theme_override_font_sizes/font_size = 19
text = "Autorzy gry
Michał Kaluska i Dawid Pawłowski"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="play_btn" type="Button" parent="."]
offset_left = 474.0
offset_top = 375.0
offset_right = 674.0
offset_bottom = 449.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_0j66b")
theme_override_font_sizes/font_size = 52
text = "PLAY!"

[node name="sound_btn" type="Button" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_0j66b")
theme_override_font_sizes/font_size = 22
text = "Sound: on"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w0g6n")

[connection signal="pressed" from="play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="sound_btn" to="." method="_on_sound_btn_pressed"]
